# agent-quick-setup

./: .gitignore  README.md  bootstrap.ps1  bootstrap.sh  findings.md  install.cmd  install.ps1  install.sh  progress.md  pyproject.toml  research_openclaw_hermes_pi.md  research_platform.md  task_plan.md
.github/workflows/: ci.yml
agent_setup/: __init__.py  cli.py  commands.py  dependencies.py  install.py  metadata.py  models.py  platforms.py  registry.py
tests/: linux_path_test.sh  python_bootstrap_test.ps1  remote_bootstrap_test.ps1  test_bootstrap_tty.sh  test_core.py  windows_bootstrap_test.ps1
